# consumerlibs

./: CMakeLists.txt  README.md
app/: build.gradle
app/src/androidTest/java/com/example/emersonparizoto/consumerlibs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/emersonparizoto/consumerlibs/: MainActivity.java
app/src/main/jni/: mynativecalcsJNI.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/emersonparizoto/consumerlibs/: ExampleUnitTest.java
